# Fast-3D-modeling-system

./: README.md  快速3D建模系统 0.3.docx  快速3D建模系统 初稿.docx  编译方法.docx
CC/include/: GeometricalAnalysisTools.h
plugins/: ccDefaultPluginInterface.cpp  ccGLFilterPluginInterface.h
plugins/core/: CMakeLists.txt
plugins/core/qRANSAC_SD/: ccRansacSDDlg.cpp
plugins/core/qRANSAC_SD/RANSAC_SD_orig/: Cone.cpp  Cone.h  Sphere.cpp  Sphere.h
plugins/core/qTest1/: CMakeLists.txt  qTest1.cpp  qTest1.h
qCC/pluginManager/: ccPluginUIManager.cpp
